--- a/.github/workflows/nasa-images.yml
+++ b/.github/workflows/nasa-images.yml
@@ -6,13 +6,33 @@ on:
       - main
 
 jobs:
+  load_dates:
+    runs-on: ubuntu-latest
+    outputs:
+      dates: ${{ steps.set_output.outputs.dates }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up jq for JSON parsing
+        run: sudo apt-get install jq
+
+      - name: Load Dates from JSON
+        id: set_output
+        run: |
+          # Leer fechas desde data.json y unirlas en un string separado por comas
+          DATES=$(jq -r '.dates[]' data.json | paste -sd "," -)
+          echo "Fechas: $DATES"
+          echo "::set-output name=dates::$DATES"
+
   download_images:
+    needs: load_dates
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        date: []  # Se establecerá dinámicamente
+        date: [${{ fromJson(needs.load_dates.outputs.dates) }}]
 
     steps:
       - name: Checkout repository
@@ -25,31 +45,7 @@ jobs:
         id: nasa_api_key
         run: echo "API_KEY=${{ secrets.NASA_API_KEY }}" >> $GITHUB_ENV
 
-      - name: Load Dates from JSON and set matrix
-        id: set_matrix
-        run: |
-          # Leer fechas desde data.json
-          DATES=$(jq -r '.dates[]' data.json)
-          echo "Fechas cargadas: $DATES"
-
-          # Crear la matriz en formato JSON para usar en el strategy matrix
-          MATRIX=$(echo "$DATES" | jq -R -s -c 'split("\n")[:-1] | map({date: .})')
-          echo "Matriz generada: $MATRIX"
-          
-          # Establecer la salida del paso
-          echo "::set-output name=matrix::$MATRIX"
-        # En este punto eliminamos `outputs` porque no es necesario
-
-      - name: Set matrix strategy dynamically
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const matrix = JSON.parse(process.env.MATRIX);
-            return { matrix: matrix };
-        env:
-          MATRIX: ${{ steps.set_matrix.outputs.matrix }}
-
-      - name: Fetch and Cache Image for Date ${{ matrix.date }}
+      - name: Fetch and Cache Image for Date
         run: |
           CACHE_DIR="cache"
           IMAGE_DIR="images"
@@ -67,27 +63,4 @@ jobs:
             echo "Usando cache para la fecha $DATE."
             URL=$(jq -r '.url' "$CACHE_FILE")
           else
-            echo "Cache no encontrado, haciendo la petición para la fecha $DATE."
-            RESPONSE=$(curl -s "https://api.nasa.gov/planetary/apod?api_key=${{ secrets.NASA_API_KEY }}&date=$DATE")
-
-            # Guardar la respuesta en cache
-            echo "$RESPONSE" > "$CACHE_FILE"
-
-            # Obtener la URL de la imagen
-            URL=$(echo "$RESPONSE" | jq -r '.url')
-          fi
-
-          # Verificar si la URL es válida antes de descargar la imagen
-          if [[ "$URL" != "null" ]]; then
-            echo "Descargando imagen para la fecha $DATE."
-            curl -s "$URL" --output "$IMAGE_FILE"
-          else
-            echo "No se encontró imagen para la fecha $DATE."
-          fi
-
-      - name: Upload images as artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: "img-${{ matrix.date }}"
-          path: images/img-${{ matrix.date }}.jpg
-          retention-days: 1
+     
