--- a/.github/workflows/nasa-images.yml
+++ b/.github/workflows/nasa-images.yml
@@ -63,4 +63,27 @@ jobs:
             echo "Usando cache para la fecha $DATE."
             URL=$(jq -r '.url' "$CACHE_FILE")
           else
-     
+            echo "Cache no encontrado, haciendo la petición para la fecha $DATE."
+            RESPONSE=$(curl -s "https://api.nasa.gov/planetary/apod?api_key=${{ secrets.NASA_API_KEY }}&date=$DATE")
+
+            # Guardar la respuesta en cache
+            echo "$RESPONSE" > "$CACHE_FILE"
+
+            # Obtener la URL de la imagen
+            URL=$(echo "$RESPONSE" | jq -r '.url')
+          fi
+
+          # Verificar si la URL es válida antes de descargar la imagen
+          if [[ "$URL" != "null" ]]; then
+            echo "Descargando imagen para la fecha $DATE."
+            curl -s "$URL" --output "$IMAGE_FILE"
+          else
+            echo "No se encontró imagen para la fecha $DATE."
+          fi
+
+      - name: Upload images as artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: "img-${{ matrix.date }}"
+          path: images/img-${{ matrix.date }}.jpg
+          retention-days: 1
