--- a/.github/workflows/nasa-images.yml
+++ b/.github/workflows/nasa-images.yml
@@ -9,30 +9,18 @@ jobs:
   download_images:
     runs-on: ubuntu-latest
     continue-on-error: true
+    
+    strategy:
+      matrix:
+        include:
+          - date: "2023-10-01"
+          - date: "2023-10-02"
+          - date: "2023-10-03"
+          - date: "2023-10-04"
+          - date: "2023-10-05"
 
     env:
       API_KEY: ${{ secrets.NASA_API_KEY }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up jq for JSON parsing
-        run: sudo apt-get install -y jq
-
-      - name: Load dates from data.json
-        id: load_dates
-        run: |
-          DATES=$(jq -r '.dates[]' data.json)
-          echo "$DATES" | awk '{print "{\"date\": \"" $1 "\"}"}' | jq -s '.' > dates-matrix.json
-
-      - name: Set dates as output
-        id: matrix_setup
-        run: |
-          echo "matrix={ \"include\": $(cat dates-matrix.json) }" >> $GITHUB_OUTPUT
-
-    strategy:
-      matrix: ${{ fromJson(steps.matrix_setup.outputs.matrix) }}
 
     steps:
       - name: Checkout repository
