--- a/.github/workflows/nasa-images.yml
+++ b/.github/workflows/nasa-images.yml
@@ -9,18 +9,29 @@ jobs:
   download_images:
     runs-on: ubuntu-latest
     continue-on-error: true
-    
-    strategy:
-      matrix:
-        include:
-          - date: "2023-10-01"
-          - date: "2023-10-02"
-          - date: "2023-10-03"
-          - date: "2023-10-04"
-          - date: "2023-10-05"
 
     env:
       API_KEY: ${{ secrets.NASA_API_KEY }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up jq for JSON parsing
+        run: sudo apt-get install -y jq
+
+      - name: Load dates from data.json
+        id: load_dates
+        run: |
+          DATES=$(jq -r '.dates[]' data.json)
+          echo "$DATES" | awk '{print "{\"date\": \"" $1 "\"}"}' | jq -s '.' > dates-matrix.json
+
+      - name: Set dates as output
+        id: matrix_setup
+        run: echo "matrix=$(cat dates-matrix.json)" >> $GITHUB_ENV
+
+    strategy:
+      matrix: ${{ fromJson(env.matrix) }}
 
     steps:
       - name: Checkout repository
